src/main/webapp/css/style.css
body{
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow-y: hidden;
}

#custom-scroll{
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
}

#custom-scroll::-webkit-scrollbar {
  width: 8px;
}

#custom-scroll::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px rgba(128, 128, 128, 0.5);
  border-radius: 10px;
}

#custom-scroll::-webkit-scrollbar-thumb {
  background: rgb(115, 115, 115, 0.75);
  border-radius: 10px;
}

#custom-scroll::-webkit-scrollbar-thumb:hover {
  background: rgb(102, 102, 102, 0.75);
}

.main{
    flex: 1 0 auto;
}

.footer{
    flex-shrink: 0;
}

.formAsLink{
    margin-bottom: 0px;
}

.inputAsLink {
    background-color: transparent;
    border: none;
    color: #007bff;
    cursor: pointer;
    padding: 8px 16px;
    font-size: 1rem;
    text-decoration: none;
}

.inputAsLink:hover {
    color: #0056b3;
    text-decoration: none;
}

.inputAsLink:focus {
    outline: none;
}

.inputbox {
    width: 100%;
}

.errormessagePadding {
    position: relative;
    padding-bottom: 24px;
    margin-bottom: 16px;
}

.errormessageWrapper {
    position: absolute;
    width: 100%;
}

.errormessage {
    color: red;
}

.button {
    display: inline-block;
    margin-bottom: 0px;
}

table {
    width: 100%;
    vertical-align: baseline;
}

td, th {
    border: 1px solid #dddddd;
    text-align: center;
    padding: 10px;
}

tr:nth-child(even) {
    background-color: #dddddd;
}

